Added makeshift watching

--- a/test-res/index.html
+++ b/test-res/index.html
@@ -23,6 +23,10 @@
                 <button id="getlocation">Get location</button>
                 <div id="location"></div>
             </div>
+            <div>
+                <button id="watchlocation">Watch</button><button id="clearwatch">Clear</button>
+                <div id="watch"></div>
+            </div>
         </div>
         <script src="cordova.js"></script>
         <script src="index.js"></script>
